syntax = "proto3";

package chat;

service ChatService {
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  rpc AddMember(AddMemberRequest) returns (AddMemberResponse);

  rpc UploadKeyPackage(UploadKeyPackageRequest) returns (UploadKeyPackageResponse);
  rpc FetchKeyPackage(FetchKeyPackageRequest) returns (FetchKeyPackageResponse);

  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc ReceiveMessages(ReceiveMessagesRequest) returns (stream ReceiveMessagesResponse);
}

message CreateGroupRequest {
  string name = 1;
}

message CreateGroupResponse {
  string group_id = 1;
}

message AddMemberRequest {
  string group_id = 1;
  string client_id = 2;
}

message AddMemberResponse {}

message ReceiveMessagesResponse {
  bytes content = 1;
  int64 timestamp = 2;
}

message SendMessageRequest {
  string sender = 1;
  repeated string recipients = 2;
  bytes content = 3;
}

message SendMessageResponse {
  int64 timestamp = 1;
}

message ReceiveMessagesRequest {
  string client_id = 1;
}

message KeyPackage {
  bytes key_package_bytes = 1;
}

message UploadKeyPackageRequest {
  string client_id = 1;
  KeyPackage key_package = 2;
}

message UploadKeyPackageResponse {
  string package_id = 1;
}

message FetchKeyPackageRequest {
  string client_id = 1;
}

message FetchKeyPackageResponse {
  KeyPackage key_package = 1;
}
